[package]
name = "maliput-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.78"
autocxx = "0.26.0"
maliput-src = { path = "../maliput-src" }

[build-dependencies]
autocxx-build = "0.26.0"
cmake = "0.1"
